Principal scaffolds completed for onboarding, auth-pin, credits, topup, activity, and settings features

--- a/src/features/topup/config/locale/en.json
+++ b/src/features/topup/config/locale/en.json
@@ -1,5 +1,5 @@
 {
-    "onboarding": {
+    "deals": {
         "welcome": {
             "title": "Welcome to Micropay",
             "motto": "pay less, pay fast",
