--- a/src/features/credits/config/locale/en.json
+++ b/src/features/credits/config/locale/en.json
@@ -1,5 +1,5 @@
 {
-    "onboarding": {
+    "credits": {
         "welcome": {
             "title": "Welcome to Micropay",
             "motto": "pay less, pay fast",
